feat:add profile table

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,19 +7,35 @@
         <div class="logo-text">SAN JUAN BATANGAS</div>
     </div>
     <ul class="navbar-list">
-      <li><a routerLink="/home">Home</a></li>
-      <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/contacts">Contacts</a></li>
-      <li><a routerLink="/calendar">Calendar</a></li>
+        <li>
+            <a routerLink="/home">
+                <i class="fa fa-home"></i> Home
+            </a>
+        </li>
+        <li>
+            <a routerLink="/about">
+                <i class="fa fa-info-circle"></i> About
+            </a>
+        </li>
+        <li>
+            <a routerLink="/contacts">
+                <i class="fa fa-address-book"></i> Contacts
+            </a>
+        </li>
+        <li>
+            <a routerLink="/calendar">
+                <i class="fa fa-calendar"></i> Calendar
+            </a>
+        </li>
       <li>
         <button class="menu-button">
           <i class="fa fa-reorder"></i>
           <ul class="dropdown-menu">
-            <li><a routerLink="/healthrecords">Records</a></li>
-            <li><a routerLink="/monthlyrecords">Monthly Records</a></li>
-            <li><a routerLink="/bmi">BMI Calculator</a></li>
-            <li><a routerLink="/childreninfo">Profile</a></li>
-            <li><a href="#">Barangay Ranking</a></li>
+            <li>
+                <a routerLink="/login">
+                    <i class="fa fa-user"></i> BHW Account
+                </a>
+            </li>
           </ul>
         </button>
       </li>
