--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,8 +13,11 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password"  required>
     </div>
-  
-    <a routerLink="/home"><button type="submit">Login</button></a>
+    
+    <div class="Login">
+    <a routerLink="/monthlyrecords" style="margin: auto;"><button type="submit">Login</button></a>
+    <a routerLink="/home" style="margin: auto;"><button type="button">Back</button></a>
+    </div>
 
   </form>
 </div>
