--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -8,6 +8,7 @@
     background-image: url("../../assets/SanJuan.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.8;
   }
 
 .container {
@@ -20,34 +21,36 @@
   .top {
     text-align: center;
     margin-bottom: 20px;
+    opacity: 0.8;
   }
   
   .top h1 {
     font-size: 24px;
     font-weight: bold;
-    background-color: lightblue;
+    background-color: #f2f2f2;
     border-radius: 20px;
   }
   
   .mission, .vision, .ten-commandments {
     text-align: center;
     margin-bottom: 30px;
-    background-color: lightblue;
+    background-color: #f2f2f2;
     border-radius: 20px;
+    opacity: 0.8;
   }
   
   .mission h2, .vision h2, .ten-commandments h2 {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
-    background-color: lightblue;
+    background-color: #f2f2f2;
     border-radius: 20px;
   }
   
   .mission p, .vision p, .ten-commandments p {
     font-size: 16px;
     line-height: 1.5;
-    background-color: lightblue;
+    background-color: #f2f2f2;
     border-radius: 20px;
   }
   
