--- a/src/app/bmicalculator/bmicalculator.component.css
+++ b/src/app/bmicalculator/bmicalculator.component.css
@@ -13,6 +13,7 @@ body {
   background-image: url("../../assets/SanJuan.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  opacity: 0.8;
 }
 
 #BMI {
@@ -197,7 +198,7 @@ select:focus {
     list-style: none;
     margin: 0;
     z-index: 1;
-    width: 150px;
+    width: 190px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
   
