--- a/src/app/children-info/children-info.component.css
+++ b/src/app/children-info/children-info.component.css
@@ -8,6 +8,7 @@
   background-image: url("../../assets/SanJuan.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  opacity: 0.8;
 }
 
 * {
@@ -81,7 +82,7 @@ body {
   list-style: none;
   margin: 0;
   z-index: 1;
-  width: 150px;
+  width: 190px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -152,6 +153,7 @@ label {
 
 input[type="text"],
 input[type="date"],
+input[type="number"],
 select {
   width: 100%;
   padding: 10px;
@@ -176,3 +178,24 @@ button[type="submit"]:hover {
   background-color: #0056b3;
 }
 
+.fieldset1{
+  border-style: hidden;
+}
+
+.legend1{
+  text-align: center;
+  font-size: 1.6vw;
+  font-weight: bold;
+}
+
+fieldset{
+  border-radius: 4%;
+  border-color: #ccc;
+  margin-bottom: 3%;
+  margin-top: 3%;
+}
+
+legend{
+  text-align: center;
+  font-weight: bold;
+}
