--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -9,6 +9,7 @@
     background-image: url("../../assets/SanJuan.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.8;
   }
 
   .container {
@@ -23,6 +24,7 @@
     padding: 10px;
     text-align: center;
     border-radius: 20px;
+    opacity: 0.8;
   }
   
   h1 {
@@ -40,6 +42,7 @@
     padding: 20px;
     text-align: center;
     border-radius: 20px;
+    opacity: 0.8;
   }
 
   h2 {
