--- a/src/app/family-profile/family-profile.component.html
+++ b/src/app/family-profile/family-profile.component.html
@@ -7,19 +7,65 @@
           <div class="logo-text">SAN JUAN BATANGAS</div>
         </div>
         <ul class="navbar-list">
-          <li><a routerLink="/home">Home</a></li>
-          <li><a routerLink="/about">About</a></li>
-          <li><a routerLink="/contacts">Contacts</a></li>
-          <li><a routerLink="/calendar">Calendar</a></li>
+          <li>
+            <a routerLink="/childreninfo">
+                <i class="fa fa-user-circle"></i> Profile
+            </a>
+          </li>
+          <li>
+            <a routerLink="/healthrecords">
+                <i class="fa fa-file-text-o"></i> Records
+            </a>
+          </li>
+          <li>
+            <a routerLink="/monthlyrecords">
+                <i class="fa fa-calendar"></i> Monthly Records
+            </a>
+          </li>
+          <li>
+            <a routerLink="/bmi">
+                <i class="fa fa-calculator"></i> BMI Calculator
+            </a>
+          </li>
           <li>
             <button class="menu-button">
               <i class="fa fa-reorder"></i>
               <ul class="dropdown-menu">
-                <li><a routerLink="/healthrecords">Records</a></li>
-                <li><a routerLink="/monthlyrecords">Monthly Records</a></li>
-                <li><a routerLink="/bmi">BMI Calculator</a></li>
-                <li><a routerLink="/childreninfo">Profile</a></li>
-                <li><a href="#">Barangay Ranking</a></li>
+                <li>
+                  <a routerLink="/profiletable">
+                      <i class="fa fa-table"></i> Profile Table
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                      <i class="fa fa-bar-chart"></i> Barangay Ranking
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                      <i class="fa fa-heartbeat"></i> BMI Result
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/healthrecordstable">
+                      <i class="fa fa-table"></i> Children Table
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/bwirtable">
+                      <i class="fa fa-table"></i> Baseline Weight and Immunization Records table
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/monthlyheightrecordstable">
+                      <i class="fa fa-table"></i> Monthly Records Result Table
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/home">
+                      <i class="fa fa-sign-out"></i> Log Out
+                  </a>
+                </li>
               </ul>
             </button>
           </li>
@@ -31,6 +77,8 @@
             <button routerLink="/childreninfo">Children Info</button>
             <button routerLink="/familyprofile">Family Profile</button>
           </div>
+    <fieldset class="fieldset1">
+      <legend class="legend1"> Family Profile </legend>
     <form>
       <div>
         <label for="householdnumber">Household Number:</label>
@@ -152,6 +200,7 @@
       </fieldset>
       <button type="submit">Submit</button>
     </form>
+  </fieldset>
     <router-outlet></router-outlet>
 
 
