--- a/src/app/nutritional-status/nutritional-status.component.html
+++ b/src/app/nutritional-status/nutritional-status.component.html
@@ -7,19 +7,65 @@
           <div class="logo-text">SAN JUAN BATANGAS</div>
         </div>
         <ul class="navbar-list">
-          <li><a routerLink="/home">Home</a></li>
-          <li><a routerLink="/about">About</a></li>
-          <li><a routerLink="/contacts">Contacts</a></li>
-          <li><a routerLink="/calendar">Calendar</a></li>
+          <li>
+            <a routerLink="/childreninfo">
+                <i class="fa fa-user-circle"></i> Profile
+            </a>
+          </li>
+          <li>
+            <a routerLink="/healthrecords">
+                <i class="fa fa-file-text-o"></i> Records
+            </a>
+          </li>
+          <li>
+            <a routerLink="/monthlyrecords">
+                <i class="fa fa-calendar"></i> Monthly Records
+            </a>
+          </li>
+          <li>
+            <a routerLink="/bmi">
+                <i class="fa fa-calculator"></i> BMI Calculator
+            </a>
+          </li>
           <li>
             <button class="menu-button">
               <i class="fa fa-reorder"></i>
               <ul class="dropdown-menu">
-                <li><a routerLink="/healthrecords">Records</a></li>
-                <li><a routerLink="/monthlyrecords">Monthly Records</a></li>
-                <li><a routerLink="/bmi">BMI Calculator</a></li>
-                <li><a routerLink="/childreninfo">Profile</a></li>
-                <li><a href="#">Barangay Ranking</a></li>
+                <li>
+                  <a routerLink="/profiletable">
+                      <i class="fa fa-table"></i> Profile Table
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                      <i class="fa fa-bar-chart"></i> Barangay Ranking
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                      <i class="fa fa-heartbeat"></i> BMI Result
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/healthrecordstable">
+                      <i class="fa fa-table"></i> Children Table
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/bwirtable">
+                      <i class="fa fa-table"></i> Baseline Weight and Immunization Records table
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/monthlyheightrecordstable">
+                      <i class="fa fa-table"></i> Monthly Records Result Table
+                  </a>
+                </li>
+                <li>
+                  <a routerLink="/home">
+                      <i class="fa fa-sign-out"></i> Log Out
+                  </a>
+                </li>
               </ul>
             </button>
           </li>
@@ -30,6 +76,7 @@
         <div class="navigation-buttons">
             <button routerLink="/healthrecords">Health Records</button>
             <button routerLink="/quarterlyrecords">Quarterly Records</button>
+            <button routerLink="/baselineweight">BaseLine</button>
             <button routerLink="/nutritionalstatus">Nutritional Status</button>
           </div>
     <fieldset class="fieldset1">
@@ -61,11 +108,11 @@
       </div>
       <div>
         <label for="weight">Weight(KG):</label>
-        <input type="text" id="weight" name="weight" ngModel required>
+        <input type="number" id="weight" name="weight" [(ngModel)]="weight">
       </div>
       <div>
         <label for="height">Height(CM):</label>
-        <input type="text" id="height" name="height" ngModel required>
+        <input type="number" id="height" name="height" [(ngModel)]="height">
       </div>
       <fieldset>
       <div>
